[project]
name = "report-portal"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "reportportal-client>=5.6.4",
]

[tool.poetry]
name = "report-portal"
version = "0.1.0"
description = ""
authors = ["l02 <l8556@outlook.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.11"
reportportal-client= "^5.6.4"
